[gd_scene load_steps=41 format=3 uid="uid://bx0dsa2w83jmc"]

[ext_resource type="Script" uid="uid://1i42u7l1byqq" path="res://classes/game.gd" id="1_a2inv"]
[ext_resource type="PackedScene" uid="uid://bs3bk8wwb46eb" path="res://scenes/level_fade.tscn" id="2_q27r4"]
[ext_resource type="Texture2D" uid="uid://x3nmpdhmakcg" path="res://assets/Background/backpack/backpack_back.png" id="3_bvssg"]
[ext_resource type="Texture2D" uid="uid://btlom8710gcig" path="res://assets/Background/backpack/L13-Layer 10.png" id="4_5w31o"]
[ext_resource type="Texture2D" uid="uid://cumihxja0v7bw" path="res://assets/Background/backpack/L12-Layer 11.png" id="5_h0ywf"]
[ext_resource type="Texture2D" uid="uid://c16eqkoxsbtne" path="res://assets/Background/backpack/L10-Layer 12++.png" id="6_701r1"]
[ext_resource type="Texture2D" uid="uid://cpvo0afsg33at" path="res://assets/Background/backpack/L8-Layer 12+.png" id="7_20c3r"]
[ext_resource type="Texture2D" uid="uid://do6uhae0tf2k5" path="res://assets/Background/backpack/L9-Layer 13.png" id="8_0lbsl"]
[ext_resource type="Texture2D" uid="uid://6tm1r7qd8rq" path="res://assets/Background/backpack/L2-Layer 19.png" id="9_0pxpe"]
[ext_resource type="Texture2D" uid="uid://dqsv4wabtr1y0" path="res://assets/Background/backpack/L7-Layer 14.png" id="10_vnjux"]
[ext_resource type="Texture2D" uid="uid://vnyibalqxe1d" path="res://assets/Background/backpack/nutella.png" id="11_f1lk0"]
[ext_resource type="Texture2D" uid="uid://4eieicx0d6fn" path="res://assets/Background/backpack/L5-Layer 18.png" id="12_iwfdo"]
[ext_resource type="Texture2D" uid="uid://cmxj3uyjjq841" path="res://assets/Background/backpack/L4-Layer 16.png" id="13_xdo01"]
[ext_resource type="Texture2D" uid="uid://my8k3yqt11fw" path="res://assets/Background/backpack/L3-Layer 15.png" id="14_8o18v"]
[ext_resource type="Texture2D" uid="uid://mxt52wbeq47b" path="res://assets/Background/backpack/L1-Layer 7.png" id="15_224xs"]
[ext_resource type="Script" uid="uid://djola5gl6hnaf" path="res://classes/nutella.gd" id="16_yo7o2"]
[ext_resource type="Script" uid="uid://c5tnood4o4tnv" path="res://classes/Level.gd" id="17_0kajw"]
[ext_resource type="PackedScene" uid="uid://v6cdwcpvgjeu" path="res://scenes/Objects/exit.tscn" id="18_hfpqo"]
[ext_resource type="PackedScene" uid="uid://xstywed8a4ni" path="res://scenes/Objects/zipper.tscn" id="19_hntur"]
[ext_resource type="PackedScene" uid="uid://bni4j3r7dp4jg" path="res://scenes/Objects/coffee.tscn" id="20_fnqom"]
[ext_resource type="PackedScene" uid="uid://cr0wiqnxvve8h" path="res://scenes/Objects/skateboard.tscn" id="21_oa304"]
[ext_resource type="Texture2D" uid="uid://by58nirfu1c4" path="res://assets/Background/backpack/backpack_front.png" id="22_ltdwl"]
[ext_resource type="PackedScene" uid="uid://bett2b74shf8q" path="res://scenes/Objects/pen.tscn" id="23_tjjra"]
[ext_resource type="PackedScene" uid="uid://1sqahkj7o667" path="res://scenes/Objects/knife.tscn" id="24_5j3mm"]
[ext_resource type="PackedScene" uid="uid://damplki3il6ju" path="res://scenes/Objects/cutable.tscn" id="25_aqoe6"]
[ext_resource type="PackedScene" uid="uid://cyiacwvceu3mp" path="res://scenes/Objects/hand.tscn" id="26_a72ti"]
[ext_resource type="AudioStream" uid="uid://c36uk4sahkpt7" path="res://assets/sound/soundtrack.wav" id="27_cvulr"]

[sub_resource type="Gradient" id="Gradient_nepv3"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7025r"]
gradient = SubResource("Gradient_nepv3")
fill_to = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m4url"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pl11u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5newe"]
size = Vector2(714, 24.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_264po"]
size = Vector2(466, 35.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhx41"]
size = Vector2(354, 651.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sww3w"]
size = Vector2(4.81259, 4.28038)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1kice"]
size = Vector2(535, 31.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2inv"]
size = Vector2(37.5031, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnb83"]
size = Vector2(44.1687, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q27r4"]
size = Vector2(56.472, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37s47"]
size = Vector2(381.5, 41.75)

[node name="Game" type="Node" node_paths=PackedStringArray("levels")]
script = ExtResource("1_a2inv")
levels = [NodePath("Level1"), NodePath("Level2"), NodePath("Level3")]

[node name="LevelFade" parent="." instance=ExtResource("2_q27r4")]

[node name="Timer" type="Timer" parent="."]
wait_time = 100.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 816)
zoom = Vector2(1.075, 1.075)
limit_left = 15
limit_right = 1075
limit_smoothed = true
position_smoothing_speed = 2.0

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("3_bvssg")

[node name="1_level" type="Node2D" parent="Background"]

[node name="floor_1_lvl" type="Sprite2D" parent="Background/1_level"]
texture = ExtResource("4_5w31o")

[node name="StaticBody2D" type="Sprite2D" parent="Background/1_level"]
texture = ExtResource("5_h0ywf")

[node name="2_level" type="Node2D" parent="Background"]

[node name="penholders" type="Sprite2D" parent="Background/2_level"]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("6_701r1")

[node name="pens" type="Sprite2D" parent="Background/2_level"]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("7_20c3r")

[node name="sock_paper" type="Sprite2D" parent="Background/2_level"]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("8_0lbsl")

[node name="Spot" type="Sprite2D" parent="Background/2_level"]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("9_0pxpe")

[node name="3_level" type="Node2D" parent="Background"]
position = Vector2(-216.269, -287.11)
scale = Vector2(0.374817, 0.374817)

[node name="floor_3_lvl" type="Sprite2D" parent="Background/3_level"]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("10_vnjux")

[node name="Nutella" type="Sprite2D" parent="Background/3_level"]
position = Vector2(298.999, 1329)
scale = Vector2(2.65474, 2.65474)
texture = ExtResource("11_f1lk0")

[node name="Nutella_back" type="Sprite2D" parent="Background/3_level"]
position = Vector2(580, 745)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("12_iwfdo")

[node name="apple" type="Sprite2D" parent="Background/3_level"]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("13_xdo01")

[node name="mushrooms" type="Sprite2D" parent="Background/3_level"]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("14_8o18v")

[node name="spiders" type="Sprite2D" parent="Background/3_level"]
position = Vector2(577, 766)
scale = Vector2(2.66797, 2.66797)
texture = ExtResource("15_224xs")

[node name="nutella" type="CharacterBody2D" parent="Background"]
visible = false
position = Vector2(0, -80.5857)
script = ExtResource("16_yo7o2")

[node name="Sprite2D" type="Sprite2D" parent="Background/nutella"]
position = Vector2(-1.14441e-05, -20.9897)
scale = Vector2(0.330161, 0.330161)
texture = SubResource("GradientTexture2D_7025r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/nutella"]
position = Vector2(0, -20.9898)
shape = SubResource("RectangleShape2D_m4url")

[node name="Level1" type="Node2D" parent="." node_paths=PackedStringArray("hand_start_pos", "camera_pos", "ceiling")]
position = Vector2(585, 399)
script = ExtResource("17_0kajw")
hand_start_pos = NodePath("HandPos")
camera_pos = NodePath("CameraPos")
ceiling = NodePath("Ceiling")
metadata/_custom_type_script = "uid://c5tnood4o4tnv"

[node name="HandPos" type="Marker2D" parent="Level1"]
position = Vector2(5, -228)
gizmo_extents = 36.4

[node name="CameraPos" type="Marker2D" parent="Level1"]
position = Vector2(-3, -46)
gizmo_extents = 36.4

[node name="Skateboard floor" type="StaticBody2D" parent="Level1"]
position = Vector2(-6, 230)
scale = Vector2(41.6, 3.6)
collision_layer = 4096
collision_mask = 262144

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1/Skateboard floor"]
shape = SubResource("RectangleShape2D_pl11u")

[node name="Floor" type="StaticBody2D" parent="Level1"]
position = Vector2(0, 186)
collision_layer = 256
collision_mask = 196927

[node name="Ceiling" type="StaticBody2D" parent="Level1/Floor"]
process_mode = 4
position = Vector2(-15, 378)
collision_layer = 256
collision_mask = 196927

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1/Floor/Ceiling"]
position = Vector2(8, 22.25)
shape = SubResource("RectangleShape2D_5newe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1/Floor"]
position = Vector2(119, 24.25)
shape = SubResource("RectangleShape2D_264po")

[node name="Ceiling" type="StaticBody2D" parent="Level1"]
process_mode = 4
position = Vector2(0, -289)
collision_layer = 256
collision_mask = 196927

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level1/Ceiling"]
polygon = PackedVector2Array(-338, 60, -325, -31, -131, -67, 207, -58, 305, -31, 325, 66, 411, 77, 391, -135, -394, -121, -411, 72)

[node name="Exit" parent="Level1" instance=ExtResource("18_hfpqo")]
position = Vector2(-211, 349)

[node name="Zipper" parent="Level1" instance=ExtResource("19_hntur")]
position = Vector2(-121, 179)

[node name="Coffee" parent="Level1" instance=ExtResource("20_fnqom")]
position = Vector2(-66, 138)

[node name="Skateboard" parent="Level1" instance=ExtResource("21_oa304")]
position = Vector2(-249, 142)

[node name="Foreground" type="StaticBody2D" parent="Level1"]
z_index = 100
position = Vector2(-584.999, -399.001)
collision_layer = 256
collision_mask = 0

[node name="Backpack_front_details" type="Sprite2D" parent="Level1/Foreground"]
position = Vector2(577, 766)
scale = Vector2(2.668, 2.668)
texture = ExtResource("22_ltdwl")

[node name="left_collision_wall" type="CollisionPolygon2D" parent="Level1/Foreground"]
polygon = PackedVector2Array(195, 1399, 198, 1253, 228, 1112, 238, 998, 234, 945, 225, 893, 228, 795, 211, 754, 222, 727, 217, 656, 217, 517, 217, 412, 255, 356, 245, 177, 208, 156, 179, 229, 159, 1377)

[node name="right_collision_wall" type="CollisionPolygon2D" parent="Level1/Foreground"]
position = Vector2(1154, 6.10352e-05)
scale = Vector2(-1, 1)
polygon = PackedVector2Array(195, 1399, 198, 1253, 228, 1112, 238, 998, 234, 945, 225, 893, 228, 795, 211, 754, 222, 727, 217, 656, 217, 517, 217, 412, 255, 356, 245, 177, 208, 156, 179, 229, 159, 1377)

[node name="Skateboard detector" type="Area2D" parent="Level1"]
position = Vector2(28, 91)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1/Skateboard detector"]
position = Vector2(149, -228.25)
shape = SubResource("RectangleShape2D_bhx41")

[node name="Coffe Stopper" type="StaticBody2D" parent="Level1"]
position = Vector2(-8, 367)
scale = Vector2(2.66797, 2.66797)
collision_layer = 8192
collision_mask = 196608

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level1/Coffe Stopper"]
position = Vector2(-9.37042, -66.3426)
shape = SubResource("RectangleShape2D_sww3w")

[node name="Level2" type="Node2D" parent="." node_paths=PackedStringArray("hand_start_pos", "camera_pos", "ceiling")]
position = Vector2(585, 788)
script = ExtResource("17_0kajw")
hand_start_pos = NodePath("HandPos")
camera_pos = NodePath("CameraPos")
ceiling = NodePath("Ceiling")
metadata/_custom_type_script = "uid://c5tnood4o4tnv"

[node name="HandPos" type="Marker2D" parent="Level2"]
position = Vector2(-175, -133)
scale = Vector2(0.958333, 1)
gizmo_extents = 36.4

[node name="CameraPos" type="Marker2D" parent="Level2"]
position = Vector2(-3, 25)
gizmo_extents = 36.4

[node name="Floor" type="StaticBody2D" parent="Level2"]
position = Vector2(0, 186)
collision_layer = 256
collision_mask = 196927

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2/Floor"]
position = Vector2(-83.5, 10.25)
shape = SubResource("RectangleShape2D_1kice")

[node name="Ceiling" type="StaticBody2D" parent="Level2"]
process_mode = 4
position = Vector2(-15, -233)
collision_layer = 256
collision_mask = 196927

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2/Ceiling"]
position = Vector2(6, 48.5)
shape = SubResource("RectangleShape2D_5newe")

[node name="Exit" parent="Level2" instance=ExtResource("18_hfpqo")]
position = Vector2(190, 355)

[node name="Sepparator" type="StaticBody2D" parent="Level2"]
position = Vector2(8, 20)
rotation = 1.28396
scale = Vector2(2.66797, 2.66797)
collision_layer = 256
collision_mask = 196639

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level2/Sepparator"]
position = Vector2(32.4318, 9.51835)
rotation = 0.280921
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_a2inv")

[node name="ColorRect" type="ColorRect" parent="Level2/Sepparator/CollisionShape2D"]
offset_left = -19.0
offset_top = -11.0
offset_right = -11.0
offset_bottom = 29.0
rotation = 0.00419113
scale = Vector2(5.69658, 0.514077)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level2/Sepparator"]
position = Vector2(-48.0634, -13.1331)
rotation = 0.280921
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_qnb83")

[node name="ColorRect2" type="ColorRect" parent="Level2/Sepparator/CollisionShape2D2"]
offset_left = -28.0
offset_top = -11.0
offset_right = -19.0
offset_bottom = 29.0
rotation = 0.0108738
scale = Vector2(5.69658, 0.514077)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Level2/Sepparator"]
position = Vector2(31.2391, 42.9344)
rotation = 0.280921
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_q27r4")

[node name="ColorRect" type="ColorRect" parent="Level2/Sepparator/CollisionShape2D3"]
offset_left = -29.0
offset_top = -11.0
offset_right = -20.0
offset_bottom = 29.0
rotation = 0.00419113
scale = Vector2(5.69658, 0.514077)

[node name="ColorRect" type="ColorRect" parent="Level2/Sepparator"]
z_index = 2
offset_left = 19.1051
offset_top = 47.84
offset_right = 29.1051
offset_bottom = 87.84
rotation = -1.30963
scale = Vector2(5.1978, 0.84488)

[node name="pen" parent="Level2" instance=ExtResource("23_tjjra")]
position = Vector2(-22, -50)
rotation = 1.57493

[node name="Level3" type="Node2D" parent="." node_paths=PackedStringArray("hand_start_pos", "camera_pos", "ceiling")]
position = Vector2(585, 1196)
script = ExtResource("17_0kajw")
hand_start_pos = NodePath("HandPos")
camera_pos = NodePath("CameraPos")
ceiling = NodePath("../Level1/Floor/Ceiling")
metadata/_custom_type_script = "uid://c5tnood4o4tnv"

[node name="HandPos" type="Marker2D" parent="Level3"]
position = Vector2(236, -165)
gizmo_extents = 36.4

[node name="CameraPos" type="Marker2D" parent="Level3"]
position = Vector2(-3, 15)
gizmo_extents = 36.4

[node name="Floor" type="StaticBody2D" parent="Level3"]
position = Vector2(-180, 186)
collision_layer = 256
collision_mask = 196927

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level3/Floor"]
position = Vector2(-55.25, 38.875)
shape = SubResource("RectangleShape2D_37s47")

[node name="Exit" parent="Level3" instance=ExtResource("18_hfpqo")]
position = Vector2(155, 371)

[node name="Knife" parent="Level3" instance=ExtResource("24_5j3mm")]
position = Vector2(-260, -46)
rotation = -3.11584

[node name="Cutable" parent="Level3" instance=ExtResource("25_aqoe6")]
position = Vector2(317, 221)

[node name="Cutable2" parent="Level3" instance=ExtResource("25_aqoe6")]
position = Vector2(252, 221)

[node name="Cutable3" parent="Level3" instance=ExtResource("25_aqoe6")]
position = Vector2(188, 221)

[node name="Cutable4" parent="Level3" instance=ExtResource("25_aqoe6")]
position = Vector2(123, 221)

[node name="Cutable5" parent="Level3" instance=ExtResource("25_aqoe6")]
position = Vector2(58, 221)

[node name="Cutable6" parent="Level3" instance=ExtResource("25_aqoe6")]
position = Vector2(-9, 221)

[node name="StaticBody2D" type="StaticBody2D" parent="Level3"]
position = Vector2(-253, 108)
collision_layer = 256
collision_mask = 31

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level3/StaticBody2D"]
polygon = PackedVector2Array(-64, -27, -57, 83, 51, 80, 57, -28, 70, -29, 62, 93, -65, 95, -74, -29)

[node name="Sprite2D" type="Sprite2D" parent="Level3/StaticBody2D"]
position = Vector2(-33, 26)
scale = Vector2(2.68514, 2.68514)
texture = ExtResource("11_f1lk0")

[node name="movement" type="Button" parent="."]
offset_left = 290.0
offset_top = 370.0
offset_right = 401.0
offset_bottom = 401.0
text = "Move next lvl"

[node name="Hand" parent="." instance=ExtResource("26_a72ti")]
position = Vector2(402, 657)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("27_cvulr")
autoplay = true

[connection signal="timeout" from="Timer" to="." method="time_out"]
[connection signal="exit_level" from="Level1/Exit" to="." method="exit_level"]
[connection signal="spilled_signal" from="Level1/Coffee" to="." method="set_coffee_spilled"]
[connection signal="body_entered" from="Level1/Skateboard detector" to="." method="_on_skateboard_detector_body_entered"]
[connection signal="exit_level" from="Level2/Exit" to="." method="exit_level"]
[connection signal="exit_level" from="Level3/Exit" to="." method="exit_level"]
[connection signal="pressed" from="movement" to="Level1/Exit" method="exit"]
